fix: alert template only accessible for API created on the same environment
(cherry picked from commit 6e85334d5aa0ea8dba48c79ee6dce9ecee55c071)